<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
  <class>XmlVisualEditor</class>
  <widget class="QMainWindow" name="XmlVisualEditor">
    <property name="minimumSize">
      <size>
        <width>800</width>
        <height>600</height>
      </size>
    </property>
    <property name="windowTitle">
      <string>XmlVisualEditor</string>
    </property>
    <widget class="QWidget" name="centralwidget">
      <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0" rowspan="2">
          <widget class="QPlainTextEdit" name="plainTextEdit" />
        </item>
        <item row="0" column="1" rowspan="2">
          <widget class="QTreeView" name="treeView">
            <property name="headerHidden">
              <bool>true</bool>
            </property>
          </widget>
        </item>
        <item row="0" column="2">
          <widget class="QTableView" name="tableView">
            <property name="alternatingRowColors">
              <bool>true</bool>
            </property>
            <attribute name="horizontalHeaderVisible">
              <bool>false</bool>
            </attribute>
            <attribute name="horizontalHeaderStretchLastSection">
              <bool>true</bool>
            </attribute>
            <attribute name="verticalHeaderVisible">
              <bool>false</bool>
            </attribute>
          </widget>
        </item>
        <item row="1" column="2">
          <widget class="QTextBrowser" name="textBrowser" />
        </item>
      </layout>
    </widget>
    <widget class="QStatusBar" name="statusbar" />
  </widget>
  <resources />
  <connections />
</ui>
